tests/trybuild/multi_dim_array.stderr
error[E0308]: mismatched types
 --> $DIR/multi_dim_array.rs:7:48
  |
7 |     let _ = StackMatrix::<i32, M, N>::new([[1, [2, 3]], [4, 5, 6], [7, 8, 9]]);
  |                                                ^^^^^^ expected `i32`, found array `[{integer}; 2]`
